--- a/src/style.css
+++ b/src/style.css
@@ -108,9 +108,7 @@ body,
     left: 50%;
     width: 70%;
     transform: translateX(-50%);
-    display: flex;
-    pointer-events: auto;
-    cursor: pointer;
+    display: block;
 }
 
 .grid-options .card-stack
@@ -122,12 +120,22 @@ body,
     height: 144px;
     padding: 8px;
     background: #ffffff44;
+    transform-origin: bottom center;
+    pointer-events: auto;
+    cursor: pointer;
 }
 
 .grid-options .card {
-    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
     height: 100%;
     margin: 0px 4px;
     outline: 2px solid #ffeeee;
     background: #ffffff66;
+
+    color: #ffffff;
+    font-size: 20px;
+    opacity: 0.8;
 }
